--- a/widget_cloudinary.html
+++ b/widget_cloudinary.html
@@ -15,7 +15,7 @@ var myWidget = cloudinary.createUploadWidget({
   uploadPreset: 'luufile'}, (error, result) => { 
     if (!error && result && result.event === "success") { 
       console.log('Done! Here is the image info: ', result.info); 
-      document.getElementById("myInput").value = result.info['url'];
+      document.getElementById("myInput").value = result.info.url;
     }
   }
 )
